<resources>
    <string name="app_name">Rick &amp; Morty</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="list_item_info">%1$s, %2$s</string>
    <string name="character_detail_title">Character details</string>
    <string name="episode_detail_title">Episode details</string>
    <string name="empty_view_message">No data found, please retry</string>
    <string name="empty_view_retry">Retry</string>
    <string name="episodes_title">Episodes</string>
    <string name="characters_title">Characters</string>
    <string name="origin_label">Origin</string>
    <string name="location_label">Location</string>
    <string name="species_label">Species</string>
    <string name="gender_label">Gender</string>
    <string name="menu_favourites_title">Favourites</string>
    <string name="favourite_characters_title">Favourites</string>
    <string name="menu_sort_title">Ordering</string>
    <string name="menu_filter_title">Filter</string>
</resources>